[tool.poetry]
name = "KunAPIPy"
version = "0.1.0"
description = "API wrapper for Kundelik.kz"
readme = "README.md"
authors = ["kesha1225 <samedov03@mail.ru> & Bs()Dd <vzadorozhkin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
