[tool.poetry]
name = "kunapipy"
version = "0.1.0"
description = "Simple wrapper for kundelik.kz API, based on pydnevnikruapi"
readme = "README.md"
authors = ["kesha1225 <samedov03@mail.ru> & Bs()Dd <vzadorozhkin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
